--- a/TPIntegrador/templates/result.html
+++ b/TPIntegrador/templates/result.html
@@ -23,8 +23,9 @@
         />
       </div>
     </div>
-    {% endif %} {%- if life==1 -%}
-
+    {% endif %} 
+    
+    {%- if life==1 -%}
     <div class="card cardResult">
       <div class="col-12 mb-3 my-5" id="loser">
         <h1 class="textResult mb-3">¡YOU LOSE!</h1>
